--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,15 +6,15 @@
   <body>
 
     {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
+    <div id="perspective" class="perspective effect-airbnb">
+      <div class="container">
+        <div class="wrapper"><!-- wrapper needed for scroll -->
+          {{ content }}
+        </div>
       </div>
     </div>
-
     {% include footer.html %}
-
+    {% include scripts.html %}
   </body>
 
 </html>
