--- a/_sass/_particles.scss
+++ b/_sass/_particles.scss
@@ -2,9 +2,30 @@
 canvas {
   display: block;
   vertical-align: bottom;
+  opacity:.6;
+
+
 }
 
 #particles-js {
   height: 100%;
-  background: #b61924;
+  background: #0A0313;
+
+}
+
+// Pannel
+.panel {
+  font-family: 'Source Sans Pro';
+  position: absolute;
+  width: 100%;
+  margin: 20% auto;
+  padding: 20px;
+  text-align: center;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  color: white;
 }
