--- a/css/main.scss
+++ b/css/main.scss
@@ -50,5 +50,6 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting",
         "particles",
-        "theater"
+        "theater",
+        "button"
 ;
