--- a/css/main.scss
+++ b/css/main.scss
@@ -51,5 +51,6 @@ $on-laptop:        800px;
         "syntax-highlighting",
         "particles",
         "theater",
-        "button"
+        "button",
+        "component"
 ;
