added in menu with header

--- a/_sass/_component.scss
+++ b/_sass/_component.scss
@@ -240,7 +240,8 @@ html, body, .perspective {
 
 /* Effect Move Left */
 .effect-moveleft {
-	background: #f4f3f1;
+	// background: #f4f3f1;
+	background: #190027;
 }
 
 .effect-moveleft .container {
@@ -600,7 +601,7 @@ html, body, .perspective {
 
 /* Media Queries */
 @media screen and (max-width: 77em) {
-	
+
 	.outer-nav.top {
 		top: 15%;
 	}
@@ -619,7 +620,7 @@ html, body, .perspective {
 	.outer-nav.bottom {
 		bottom: 5%;
 	}
-	
+
 	.outer-nav.horizontal {
 		font-size: 1.7em;
 		width: 6.2em;
