--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,7 @@
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %}
+          <button id="showMenu">Show Menu</button>
       </div>
     </nav>
 
