--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,11 @@
 
   <body>
 
-    <!-- {% include header.html %} -->
+
     <div id="perspective" class="perspective effect-moveleft">
       <div class="container">
         <div class="wrapper"><!-- wrapper needed for scroll -->
+          {% include header.html %}
           {{ content }}
         </div>
       </div>
