--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,9 +1,14 @@
 <nav class="outer-nav right vertical">
-  <a href="#" class="icon-home">Home</a>
+  {% for page in site.pages %}
+    {% if page.title %}
+    <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+    {% endif %}
+  {% endfor %}
+<!--   <a href="#" class="icon-home">Home</a>
   <a href="#" class="icon-news">News</a>
   <a href="#" class="icon-image">Images</a>
   <a href="#" class="icon-upload">Uploads</a>
   <a href="#" class="icon-star">Favorites</a>
   <a href="#" class="icon-mail">Messages</a>
-  <a href="#" class="icon-lock">Security</a>
+  <a href="#" class="icon-lock">Security</a> -->
 </nav>
