--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -28,7 +28,7 @@ canvas {
     float: right;
     width: 36px;
     height: 26px;
-    line-height: 0;
+    line-height: 36px;
     padding-top: 10px;
     text-align: center;
 
