fixed basic layout

--- a/_sass/_component.scss
+++ b/_sass/_component.scss
@@ -135,7 +135,7 @@ html, body, .perspective {
 }
 
 .outer-nav a:hover {
-	color: #ffdccd;
+	color: #190027;
 }
 
 .outer-nav.vertical a {
@@ -241,7 +241,7 @@ html, body, .perspective {
 /* Effect Move Left */
 .effect-moveleft {
 	// background: #f4f3f1;
-	background: #190027;
+	background: #202C45;
 }
 
 .effect-moveleft .container {
