--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,6 @@
-<script src="js/particles.js"></script>
-<script src="js/theater.js"></script>
-<script src="js/modernizr.custom.25376.js"></script>
-<script src="js/classie.js"></script>
-<script src="js/menu.js"></script>
-<script src="js/app.js"></script>
+<script src="/js/particles.js"></script>
+<script src="/js/theater.js"></script>
+<script src="/js/modernizr.custom.25376.js"></script>
+<script src="/js/classie.js"></script>
+<script src="/js/menu.js"></script>
+<script src="/js/app.js"></script>
