--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -26,18 +26,25 @@ canvas {
 .menu-icon {
     display: block;
     float: right;
-    width: 36px;
-    height: 26px;
-    line-height: 36px;
-    padding-top: 10px;
+    width: 56px;
+    height: 56px;
+    line-height: 70px;
     text-align: center;
+    cursor: pointer;
 
+    &:hover {
+        > svg path {
+            fill: rgba(32, 44, 69, 0.73);
+        }
+    }
     > svg {
-        width: 18px;
-        height: 15px;
+        width: 25px;
+        height: 25px;
 
         path {
             fill: $grey-color-dark;
+            fill: #202C45;
+
         }
     }
 }
@@ -49,6 +56,7 @@ canvas {
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
+    letter-spacing: 1px;
 
     &,
     &:visited {
