--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -26,6 +26,16 @@ canvas {
   }
 }
 
+.small-circle {
+    height: 40px;
+    border-radius: 50%;
+    margin: 9px;
+    vertical-align: top;
+    @include media-query($on-palm) {
+    display: none !important;
+  }
+}
+
 .menu-icon {
     display: block;
     float: right;
