--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -4,3 +4,4 @@
 <script src="/js/classie.js"></script>
 <script src="/js/menu.js"></script>
 <script src="/js/app.js"></script>
+<script src="/js/music.js"></script>
