--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,9 +45,10 @@
         </ul>
       </div>
 
-      <!-- <div class="footer-col  footer-col-3">
+      <div class="footer-col  footer-col-3">
+        <img class="small-circle" src="/assets/pics/profile.jpg">
         <p class="text">{{ site.description }}</p>
-      </div> -->
+      </div>
     </div>
 
   </div>
