--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -81,6 +81,10 @@ canvas {
     &:visited {
         color: $grey-color-dark;
     }
+    &:hover {
+        color: transparent;
+        text-shadow: 0 0 3px rgba(0,0,0,1);
+    }
 }
 
 .site-nav {
@@ -145,6 +149,7 @@ canvas {
         }
     }
 }
+
 
 
 
