--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,3 +5,5 @@
 <script src="/js/menu.js"></script>
 <script src="/js/app.js"></script>
 <script src="/js/music.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.11.8/TweenMax.min.js"></script>
+<script src="/js/skillsGraph.js"></script>
