--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,6 @@
 ---
 layout: default
 ---
-<div class="container" style="text-align:center;">
+<div class="page" style="text-align:center;">
     {{ content }}
 </div>
