--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,4 +6,7 @@
 <script src="/js/app.js"></script>
 <script src="/js/music.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.11.8/TweenMax.min.js"></script>
-<script src="/js/skillsGraph.js"></script>
+<!-- <script src="/js/skillsGraph.js"></script> -->
+<script src="/js/Chart.js"></script>
+<script src="/js/Chart.Radar.js"></script>
+<script src="/js/aboutGraphs.js"></script>
