--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -1,3 +1,18 @@
 .page {
   // background: rgb(36, 22, 23);
 }
+
+.about {
+  .col-3 {
+    margin: 3%;
+    width: 27%;
+  }
+
+  @include media-query($on-palm) {
+      .col-3 {
+          margin: 7.5%;
+          width: 85%;
+          display: block;
+      }
+  }
+}
