--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,12 +1,12 @@
 <script src="/js/particles.js"></script>
 <script src="/js/theater.js"></script>
 <script src="/js/modernizr.custom.25376.js"></script>
+<script src="/js/scrollReveal.js"></script>
 <script src="/js/classie.js"></script>
 <script src="/js/menu.js"></script>
 <script src="/js/app.js"></script>
 <script src="/js/music.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.11.8/TweenMax.min.js"></script>
-<!-- <script src="/js/skillsGraph.js"></script> -->
 <script src="/js/Chart.js"></script>
 <script src="/js/Chart.Radar.js"></script>
 <script src="/js/aboutGraphs.js"></script>
