--- a/css/main.scss
+++ b/css/main.scss
@@ -53,5 +53,6 @@ $on-laptop:        800px;
         "theater",
         "button",
         "component",
-        "about"
+        "about",
+        "music"
 ;
