--- a/_sass/_music.scss
+++ b/_sass/_music.scss
@@ -1,5 +1,40 @@
 #music.grid {
   div {
     display: inline-block;
+    position: relative;
+
+    a.title {
+      visibility: hidden;
+      position: absolute;
+      top: 40%;
+      left: 0;
+      right: 0;
+      text-align: center;
+      padding: 20px;
+      color: white;
+      text-shadow: 0px 0px 5px black;
+
+    }
+    img {
+      -webkit-transition: .5s -webkit-filter ease-in-out;
+      transition: .5s -webkit-filter ease-in-out;
+    }
+    &:hover {
+      a.title {
+        -webkit-transition: 1s all ease-in;
+        -moz-transition: 1s all ease-in;
+        -o-transition: 1s all ease-in;
+        transition: 1s all ease-in;
+        visibility: visible;
+
+      }
+      img {
+        filter: blur(5px);
+        -webkit-filter: blur(5px);
+        -moz-filter: blur(5px);
+        -o-filter: blur(5px);
+        -ms-filter: blur(5px);
+      }
+    }
   }
 }
