--- a/_sass/_music.scss
+++ b/_sass/_music.scss
@@ -29,11 +29,11 @@
 
       }
       img {
-        filter: blur(5px);
-        -webkit-filter: blur(5px);
-        -moz-filter: blur(5px);
-        -o-filter: blur(5px);
-        -ms-filter: blur(5px);
+        -webkit-filter: blur(5px) brightness(0.6);
+        -moz-filter: blur(5px) brightness(0.6);
+        -o-filter: blur(5px) brightness(0.6);
+        -ms-filter: blur(5px) brightness(0.6);
+        filter: blur(5px) brightness(0.6);
       }
     }
   }
