--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -3,6 +3,9 @@
 <script src="/js/modernizr.custom.25376.js"></script>
 <script src="/js/scrollReveal.js"></script>
 <script src="/js/classie.js"></script>
+<script src="/js/d3.js"></script>
+<script src="/js/topojson.js"></script>
+<script src="/js/datamaps.all.min.js"></script>
 <script src="/js/menu.js"></script>
 <script src="/js/app.js"></script>
 <script src="/js/music.js"></script>
@@ -10,3 +13,4 @@
 <script src="/js/Chart.js"></script>
 <script src="/js/Chart.Radar.js"></script>
 <script src="/js/aboutGraphs.js"></script>
+
