--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -25,6 +25,10 @@
     width: 27%;
   }
 
+  .tooltip {
+    background: 'rgba(126, 128, 126, 0.2)';
+  }
+
   @include media-query($on-palm) {
       .col-3 {
           margin: 7.5%;
