--- a/css/main.scss
+++ b/css/main.scss
@@ -54,5 +54,6 @@ $on-laptop:        800px;
         "button",
         "component",
         "about",
-        "music"
+        "music",
+        "project"
 ;
