--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,6 +6,7 @@
 <script src="/js/d3.js"></script>
 <script src="/js/topojson.js"></script>
 <script src="/js/datamaps.all.min.js"></script>
+<script src="/js/isotope.pkgd.js"></script>
 <script src="/js/menu.js"></script>
 <script src="/js/app.js"></script>
 <script src="/js/music.js"></script>
@@ -13,4 +14,6 @@
 <script src="/js/Chart.js"></script>
 <script src="/js/Chart.Radar.js"></script>
 <script src="/js/aboutGraphs.js"></script>
+<script src="/js/projects.js"></script>
+
 
