--- a/_sass/_project.scss
+++ b/_sass/_project.scss
@@ -1,24 +1,23 @@
 .project-list {
   margin-top: 30px;
   text-align: center;
+  margin-left: 0px;
   li {
     display: inline-block;
     position: relative;
-    width: 16%;
+    width: 16.5%;
     margin: 1%;
     img {
-      width: 200px;
-      height: 200px;
       border-radius:10px;
-      border:1px solid black;
+      border:1px solid rgba(0, 0, 0, 0.5);
     }
     h2 {
       position: absolute;
       top: 15%;
-      left: 6%;
+      left: 10%;
       right: 0;
       bottom: 0;
-      width: 88%;
+      width: 80%;
       height: 90%;
       // vertical-align: bottom;
       visibility: hidden;
