playing with modal for projects

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -15,5 +15,6 @@
 <script src="/js/Chart.Radar.js"></script>
 <script src="/js/aboutGraphs.js"></script>
 <script src="/js/projects.js"></script>
+<script src="/js/avgrund.js"></script>
 
 
