--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="project">
+<div class="project avgrund-contents">
 
   <header class="project-header">
     <h1 class="project-title">{{ page.title }}</h1>
