figuring out project view

--- a/_sass/_project.scss
+++ b/_sass/_project.scss
@@ -75,3 +75,10 @@
     }
   }
 }
+
+.GI_TW_expander {
+  background: rgba(236, 236, 236, 1) !important;
+  .GI_TW_pointer {
+    border-bottom: 20px solid rgba(236, 236, 236, 1) !important;
+  }
+}
