--- a/css/main.scss
+++ b/css/main.scss
@@ -55,5 +55,6 @@ $on-laptop:        800px;
         "component",
         "about",
         "music",
-        "project"
+        "project",
+        "GITheWall"
 ;
