--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,3 +1,4 @@
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="/js/particles.js"></script>
 <script src="/js/theater.js"></script>
 <script src="/js/modernizr.custom.25376.js"></script>
@@ -7,6 +8,7 @@
 <script src="/js/topojson.js"></script>
 <script src="/js/datamaps.all.min.js"></script>
 <script src="/js/isotope.pkgd.js"></script>
+<script src="/js/jQuery.GI.TheWall.js"></script>
 <script src="/js/menu.js"></script>
 <script src="/js/app.js"></script>
 <script src="/js/music.js"></script>
