improved project page

--- a/_sass/_project.scss
+++ b/_sass/_project.scss
@@ -81,4 +81,7 @@
   .GI_TW_pointer {
     border-bottom: 20px solid rgba(236, 236, 236, 1) !important;
   }
+  .fa {
+    color: rgb(161, 161, 161);
+  }
 }
