--- a/css/main.scss
+++ b/css/main.scss
@@ -56,5 +56,6 @@ $on-laptop:        800px;
         "about",
         "music",
         "project",
-        "GITheWall"
+        "GITheWall",
+        "fa"
 ;
