--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -39,7 +39,7 @@ canvas {
 .menu-icon {
     display: block;
     float: right;
-    width: 56px;
+    // width: 56px;
     height: 56px;
     line-height: 70px;
     text-align: center;
@@ -53,8 +53,8 @@ canvas {
     }
     > svg {
 
-        width: 25px;
-        height: 25px;
+        width: 83px;
+        height: 33px;
 
         path {
             -webkit-transition: all 1s ease-in-out;
