fixed project preview bug

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,4 +1,4 @@
-<div class="project">
+<div class="project" style="padding: 30px 10px;">
 
   <header class="project-header">
     <h1 class="project-title">{{ page.title }}</h1>
