--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,12 +1,35 @@
-<div class="project" style="padding: 30px 10px;">
+<div class="project" style="padding: 30px 10px;text-align:center;max-width: 750px;margin: 0 auto;">
 
   <header class="project-header">
     <h1 class="project-title">{{ page.title }}</h1>
-    <p class="project-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    <p class="project-meta" style="color:rgb(192, 192, 192);">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
 
   <article class="project-content">
     {{ content }}
+    {% if page.project_link || page.code_link || page.presentation_link || page.website_link %}
+    <div class="project-links">
+      {% if page.website_link %}
+      <p class="col-3">
+        <a href="{{page.website_link}}" target="_blank"><i class="fa fa-laptop"></i>&nbsp; The Website</a>
+      </p>
+      {% endif %}
+      {% if page.project_link %}
+      <p class="col-3">
+        <a href="{{page.project_link}}" target="_blank"><i class="fa fa-laptop"></i>&nbsp; The Project</a>
+      </p>
+      {% endif %}
+      {% if page.code_link %}
+      <p class="col-3">
+        <a href="{{page.code_link}}" target="_blank"><i class="fa fa-github"></i>&nbsp; The Code</a>
+      </p>
+      {% endif %}
+      {% if page.video_link %}
+      <p class="col-3">
+        <a href="{{page.presentation_link}}" target="_blank"><i class="fa fa-bullhorn"></i>&nbsp; The Presentation</a>
+      </p>
+      {% endif %}
+    </div>
+    {% endif %}
   </article>
-
 </div>
