--- a/_sass/_project.scss
+++ b/_sass/_project.scss
@@ -86,3 +86,26 @@
     color: rgb(161, 161, 161);
   }
 }
+
+.project-content {
+  .fa {
+    color: rgb(103, 103, 103);
+  }
+  .col-3 {
+    // margin: 3%;
+    width: 27%;
+    display: inline-block;
+  }
+  .project-links {
+    border-top: 1px solid rgb(202, 202, 202);
+    padding-top: 10px;
+    margin-top: 20px;
+  }
+  @include media-query($on-palm) {
+    .col-3 {
+        // margin: 7.5%;
+        width: 100%;
+        display: block;
+    }
+  }
+}
