--- a/css/main.scss
+++ b/css/main.scss
@@ -2,7 +2,7 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 @charset "utf-8";
-
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600);
 
 
 // Our variables
