temporary blog fix

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,5 +5,5 @@
   <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
   {% endif %}
 {% endfor %}
-  <a class="page-link" href="http://kevinmcalear.com/thoughts" target="_blank">Thoughts</a>
+  <a class="page-link" href="https://medium.com/@kevinmcalear" target="_blank">Thoughts</a>
 </nav>
