--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,7 +7,7 @@
     min-height: 56px;
     padding-right: $spacing-unit;
     padding-left: $spacing-unit;
-
+    border-bottom: 1px solid rgb(242, 242, 242);
     // Positioning context for the mobile navigation icon
     position: relative;
 }
