--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -163,6 +163,8 @@ pre {
     max-width: 100%;
     margin-right: auto;
     margin-left: auto;
+    height: 100%;
+    overflow: hidden;
     // padding-right: $spacing-unit;
     // padding-left: $spacing-unit;
     @extend %clearfix;
