changed menu icon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,13 +4,7 @@
     <!-- Website Title -->
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
     <!-- Menu Icon -->
-    <a id="showMenu" class="menu-icon">
-      <svg viewBox="0 0 10 100">
-          <circle cx="40" cy="60" r="10"></circle>
-          <circle cx="80" cy="60" r="10"></circle>
-          <circle cx="120" cy="60" r="10"></circle>
-        </svg>
-    </a>
+    <a id="showMenu" class="menu-icon"><i class="fa fa-large fa-bars"></i></a>
   </div>
 
 </header>
