finished footer styling

--- a/_sass/_fa.scss
+++ b/_sass/_fa.scss
@@ -32,3 +32,15 @@
 .fa-bullhorn:before {
     content: "\f0a1"
 }
+
+.fa-envelope-o:before {
+    content: "\f003"
+}
+
+.fa-twitter:before {
+    content: "\f099"
+}
+
+.fa-github:before {
+    content: "\f09b"
+}
